click event does not dispatch to parent when child target stops hit testing after mousedown https://bugs.webkit.org/show_bug.cgi?id=174564 <rdar://problem/33340234>

Reviewed by Simon Fraser.

Source/WebCore:

As per [1], if the mouse down node and the mouse release node differ, then we are supposed to
fire the click event at their common ancestor, if such node exists. This patch implements this
logic. This also aligns our behavior with Blink.

[1] https://w3c.github.io/uievents/#events-mouseevent-event-order

Test: fast/events/mouse-click-different-mouseDown-mouseUp-nodes.html

* page/EventHandler.cpp:
(WebCore::targetNodeForClickEvent):

LayoutTests:

Add layout test coverage.

* fast/events/mouse-click-different-mouseDown-mouseUp-nodes-expected.txt: Added.
* fast/events/mouse-click-different-mouseDown-mouseUp-nodes.html: Added.


Canonical link: https://commits.webkit.org/191389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219568 268f45cc-cd09-0410-ab3c-d52691b4dbfc